# asset_allocation

./: pyproject.toml  run.py  utility_functions.py
data/: Return_Data.xlsx
output/: optimal_weights_2026-06-04_13-07_min_vol.xlsx  optimal_weights_2026-06-04_13-14_min_var.xlsx  optimal_weights_2026-06-04_13-32_min_var_hist_ret.xlsx  optimal_weights_2026-06-04_13-57_min_es.xlsx  optimal_weights_2026-06-04_14-34_min_es_trust-constr.xlsx  optimal_weights_2026-06-04_15-08_min_var_shrinkage.xlsx  summary_stats_assets.xlsx
