
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset_allocation"
version = "0.1.0"
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "datetime",
    "openpyxl",
    "ipykernel",
    "matplotlib",
    "scipy",
    "seaborn",
    "scikit-learn",
	"cvxpy",
]

[tool.setuptools]
packages = []  # Tells it there are no internal code packages to install